[gd_scene load_steps=12 format=3 uid="uid://dearka46mr1hn"]

[ext_resource type="Script" path="res://events/battles/battle.gd" id="1_sw14v"]
[ext_resource type="Script" path="res://addons/maaacks_game_template/extras/scripts/PauseMenuController.gd" id="2_a7vt7"]
[ext_resource type="PackedScene" uid="uid://bqykem1cpd0v5" path="res://entities/player/player.tscn" id="2_r14ym"]
[ext_resource type="PackedScene" uid="uid://bkcsjsk2ciff" path="res://addons/maaacks_game_template/base/scenes/MusicPlayers/BackgroundMusicPlayer.tscn" id="2_rx53a"]
[ext_resource type="PackedScene" uid="uid://cdwvtbtwmrqbn" path="res://addons/maaacks_game_template/extras/scenes/PauseMenu/PauseMenu.tscn" id="3_ga8ma"]
[ext_resource type="AudioStream" uid="uid://b5et71yx7hxc6" path="res://assets/bgm/BATTLE!.mp3" id="3_vts0n"]
[ext_resource type="PackedScene" uid="uid://csjic52l2x2c5" path="res://events/ui/ego_display_hud.tscn" id="4_lvjpo"]
[ext_resource type="PackedScene" uid="uid://bga3t703ec3ht" path="res://events/ui/card_hand.tscn" id="4_yq8u1"]
[ext_resource type="Script" path="res://entities/player/player.gd" id="5_v2vfh"]
[ext_resource type="PackedScene" uid="uid://coflieblvul6y" path="res://events/ui/card_selection_popup.tscn" id="12_t0yq5"]
[ext_resource type="Script" path="res://events/ui/card_selection_popup.gd" id="13_jskvv"]

[node name="BattleTemplate" type="CanvasLayer"]
script = ExtResource("1_sw14v")
CARD_ID_ARRAY = Array[String](["fire_def", "water_def", "air_atk"])

[node name="BackgroundMusicPlayer" parent="." instance=ExtResource("2_rx53a")]
stream = ExtResource("3_vts0n")
volume_db = -5.0
bus = &"BGM"

[node name="PauseMenuController" type="Node" parent="."]
script = ExtResource("2_a7vt7")
pause_menu_packed = ExtResource("3_ga8ma")

[node name="Background" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Player" parent="." instance=ExtResource("2_r14ym")]
offset_left = 219.0
offset_top = 342.0
offset_right = 322.0
offset_bottom = 515.0
script = ExtResource("5_v2vfh")

[node name="CardHandHUD" parent="." instance=ExtResource("4_yq8u1")]
z_index = 1
anchors_preset = 7
anchor_left = 0.5
anchor_right = 0.5
offset_left = -576.0
offset_right = 576.0

[node name="EGODisplayHUD" parent="." instance=ExtResource("4_lvjpo")]

[node name="BackgroundDim" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.501961)

[node name="CardDeselectButton" type="TextureButton" parent="BackgroundDim"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Enemies" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="LabelContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -53.0
offset_right = 53.0
offset_bottom = 94.0
grow_horizontal = 2

[node name="TurnLabel" type="Label" parent="LabelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Turn 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FloorLabel" type="Label" parent="LabelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Floor 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardSelectionPopup" parent="." instance=ExtResource("12_t0yq5")]
script = ExtResource("13_jskvv")

[editable path="CardSelectionPopup"]
